# RCSW

./: .gitignore  README.md  build.ps1  build.sh  build_linux.sh  build_macos.sh  main.py  pyproject.toml  pyproject.toml.bak  requirements.txt
.opencode/plans/: rcsw-plan.md
rcsw/: app.py  silent.py
rcsw/core/: config.py  detector.py  engine.py  logger.py  models.py  notification.py  processor.py  utils.py  windows_taskbar.py  worker.py
rcsw/resources/: icon.icns
rcsw/ui/: about_panel.py  controller.py  file_panel.py  help_panel.py  main_window.py  settings_panel.py  software_settings_panel.py  style.py  widget_helpers.py
tests/: test_detector.py  test_processor.py
