[project]
name = "rcsw"
version = "0.3.0"
description = "Remove CamScanner Watermark"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pyside6>=6.11.1",
    "pyside6-fluent-widgets[full]>=1.11.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
