[project]
name = "rcsw"
version = "0.3.0"
description = "Remove CamScanner Watermark"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.5",
    "pyside6-fluent-widgets>=1.5",
    "pymupdf>=1.23",
    "pillow>=10.0",
    "nuitka>=4.1.3",
]

[project.scripts]
rcsw = "rcsw.app:main"
